--- a/groundstation.html
+++ b/groundstation.html
@@ -44,7 +44,7 @@
     .attr("r", "50")
     .attr("fill", "orange");
 </script>
-<script>
+<script id="three">
 
   var scene = new THREE.Scene();
   var camera = new THREE.PerspectiveCamera(40, (window.innerWidth/3) / window.innerHeight, 0.1, 1000);
