--- a/groundstation.html
+++ b/groundstation.html
@@ -1,64 +1,122 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Cansat2024</title>
-
-  <style type="text/css">
-    body {
-      display: grid;
-      grid-template-columns: repeat(3, 1fr);
-      padding: 0;
-      margin: auto;
-      background: #000;
-      overflow: hidden;
-    }
-
-    div {
-      height: 100vh;
-    }
-
-    #graphics {
-      grid-column: span 2;
-      border-right: 1px solid #fff;
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Gráfico de Líneas con D3.js</title>
+    <style type="text/css">
+      body{
+        background: linear-gradient(to bottom right, #012, #025, #057);
+        color: white;
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+        grid-template-rows: repeat(2, 1fr);
+        padding: 0;
+        margin: auto;
+        overflow: hidden;
+      }
+      #grafico{
+        border-right: 1px solid white;
+        grid-column: span 2;
+        grid-row: span 2;
+      }
+      #tresd{
+        grid-row: span 1;
+        grid-column: span 1;
+        border-bottom: 1px solid white;
+      }
+      canvas{
+        widows: 100%;
+        height: 100%;
+      }
+    </style>
+    <!-- Agrega el enlace CDN de D3.js -->
+    <script src="https://d3js.org/d3.v5.min.js"></script>
+    <script src="https://threejs.org/build/three.js"></script>
 </head>
 <body>
 
-<div id="graphics"></div>
-<div id="3d"></div>
+<div id="grafico"></div>
+<div id="tresd"></div>
 
-<script src="https://d3js.org/d3.v5.min.js"></script>
-<script src="https://threejs.org/build/three.js"></script>
+<script>
+var datos = [
+    { x: 1, y: 10 },
+    { x: 2, y: 20 },
+    { x: 3, y: 15 },
+    { x: 4, y: 25 },
+    { x: 5, y: 18 }
+];
 
-<script id="d3">
-  var svg = d3.select("#graphics")
+var ancho = window.innerWidth*2/3;
+var altura = window.innerHeight;
+var margen = { superior: 50, derecho: 50, inferior: 50, izquierdo: 50 };
+var anchoGrafico = ancho - margen.izquierdo - margen.derecho;
+var alturaGrafico = altura - margen.superior - margen.inferior;
+
+// Escala x
+var escalaX = d3.scaleLinear()
+    .domain([1, d3.max(datos, function(d) { return d.x; })])
+    .range([0, anchoGrafico]);
+
+// Escala y
+var escalaY = d3.scaleLinear()
+    .domain([0, d3.max(datos, function(d) { return d.y; })])
+    .range([alturaGrafico, 0]);
+
+// Crear el contenedor del gráfico
+var svg = d3.select("#grafico")
     .append("svg")
-    .attr("width", "100%")
-    .attr("height", "100%")
-    .append("circle")
-    .attr("cx", "50%")
-    .attr("cy", "50%")
-    .attr("r", "50")
-    .attr("fill", "orange");
+    .attr("width", ancho)
+    .attr("height", altura)
+    .append("g")
+    .attr("transform", "translate(" + margen.izquierdo + "," + margen.superior + ")");
+
+// Crear la línea
+var linea = d3.line()
+    .x(function(d) { return escalaX(d.x); })
+    .y(function(d) { return escalaY(d.y); });
+
+// Dibujar la línea
+svg.append("path")
+    .data([datos])
+    .attr("class", "linea")
+    .attr("d", linea);
+
+// Agregar ejes
+svg.append("g")
+    .attr("transform", "translate(0," + alturaGrafico + ")")
+    .call(d3.axisBottom(escalaX));
+
+svg.append("g")
+    .call(d3.axisLeft(escalaY));
+
 </script>
+
+<style>
+/* Agrega estilos CSS según sea necesario */
+.linea {
+    fill: none;
+    stroke: blue;
+    stroke-width: 2px;
+}
+</style>
+
 <script id="three">
 
   var scene = new THREE.Scene();
-  var camera = new THREE.PerspectiveCamera(40, (window.innerWidth/3) / window.innerHeight, 0.1, 1000);
+  var camera = new THREE.PerspectiveCamera(40, (window.innerWidth/3) / window.innerHeight*2, 0.1, 1000);
   var renderer = new THREE.WebGLRenderer();
 
-  renderer.setSize(window.innerWidth / 3, window.innerHeight);
-  document.getElementById("3d").appendChild(renderer.domElement);
+  renderer.setSize(window.innerWidth / 3, window.innerHeight/2);
+  document.getElementById("tresd").appendChild(renderer.domElement);
 
   var geometry = new THREE.BoxGeometry();
   var material = new THREE.MeshBasicMaterial({ color: 0x00ff00 });
   var cube = new THREE.Mesh(geometry, material);
   scene.add(cube);
 
-  camera.position.z = 10;
+  camera.position.z = 3;
 
   var animate = function () {
     requestAnimationFrame(animate);
