--- a/groundstation.html
+++ b/groundstation.html
@@ -3,33 +3,79 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Gráfico de Líneas con D3.js</title>
-    <style type="text/css">
-      body{
-        background: linear-gradient(to bottom right, #012, #025, #057);
-        color: white;
-        display: grid;
-        grid-template-columns: repeat(3, 1fr);
-        grid-template-rows: repeat(2, 1fr);
-        padding: 0;
-        margin: auto;
-        overflow: hidden;
-      }
-      #grafico{
-        border-right: 1px solid white;
-        grid-column: span 2;
-        grid-row: span 2;
-      }
-      #tresd{
-        grid-row: span 1;
-        grid-column: span 1;
-        border-bottom: 1px solid white;
-      }
-      canvas{
-        widows: 100%;
-        height: 100%;
-      }
-    </style>
+    <link rel="icon" href="https://raw.githubusercontent.com/IgualadaSat/Cansat2024_prototypeApp_0.0/main/dist/public/favicon.png" type="image/x-icon">
+    <title>Cansat2024</title>
+<style type="text/css">
+* {
+    background: #0000;
+    font-family:  Consolas, Fira Code,"Comic Sans MS", "Roboto", inconsolata, sans-serif;
+    font-size: 16px;
+    color: #fff;
+    transition-duration: 200ms;
+    cursor: default;
+    padding: 0;
+}
+body{
+  background: linear-gradient(to bottom right, #012, #025, #057);
+  color: white;
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  padding: 0;
+  margin: auto;
+  overflow: hidden;
+}
+div{
+  overflow: hidden;
+}
+#grafico{
+  border-right: 1px solid white;
+  grid-column: span 2;
+  grid-row: span 2;
+}
+#tres{
+  grid-row: span 1;
+  grid-column: span 1;
+  border-bottom: 1px solid white;
+}
+canvas{
+  widows: 100%;
+  height: 100%;
+}
+h1{
+    padding-left: 10px;
+    font-weight: bold;
+    color: #fff;
+    width: calc(100% - 0);
+    font-size: 24px;
+    background: linear-gradient(to right, #07a, #0ffa, #0ffa);
+}
+h2{
+    padding-left: 10px;
+    font-weight: bold;
+    color: #fff;
+    width: calc(100% - 0);
+    font-size: 24px;
+    background: linear-gradient(to bottom right, #f21, #f52, #f75);
+}
+h3{
+    padding-left: 10px;
+    font-weight: bold;
+    color: #000;
+    width: calc(100% - 0);
+    font-size: 24px;
+    background: linear-gradient(to bottom right, #1f2, #2f5, #5f7);
+}
+#terminal{
+  padding-left: 10px;
+  cursor: text;
+  background: #0002;
+  color: #0ff;
+  border: none;
+  width: 100%;
+  height: 100%;
+}
+</style>
     <!-- Agrega el enlace CDN de D3.js -->
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script src="https://threejs.org/build/three.js"></script>
@@ -37,7 +83,14 @@
 <body>
 
 <div id="grafico"></div>
-<div id="tresd"></div>
+<div id="tres">
+  <h1>datos:</h1>
+  <div id="tresd"></div>
+</div>
+<div id="debug">
+  <h1>debug:</h1>
+  <textarea id="terminal"></textarea>
+</div>
 
 <script>
 var datos = [
